# llmeval

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: DiffView.tsx  FilterBar.tsx  NewRunModal.tsx  RunDetail.tsx  RunList.tsx  StatusBadge.tsx
docs/: Makefile  changelog.rst  cli.rst  conf.py  getting_started.rst  index.rst  suite_format.rst
docs/_build/html/: .buildinfo  changelog.html  cli.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  suite_format.html
docs/_build/html/.doctrees/: changelog.doctree  cli.doctree  environment.pickle  getting_started.doctree  index.doctree  suite_format.doctree
docs/_build/html/.doctrees/api/: exceptions.doctree  index.doctree  judge.doctree  models.doctree  report.doctree  runner.doctree  schema.doctree  server.doctree  storage.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/llmeval/: exceptions.html  judge.html  models.html  runner.html
docs/_build/html/_modules/llmeval/models/: anthropic_adapter.html  base.html  openai_adapter.html
docs/_build/html/_modules/llmeval/report/: cli_reporter.html  diff_reporter.html
docs/_build/html/_modules/llmeval/schema/: results.html  test_suite.html
docs/_build/html/_modules/llmeval/server/: api.html
docs/_build/html/_modules/llmeval/storage/: base.html  sqlite.html
docs/_build/html/api/: exceptions.html  index.html  judge.html  models.html  report.html  runner.html  schema.html  server.html  storage.html
docs/api/: exceptions.rst  index.rst  judge.rst  models.rst  report.rst  runner.rst  schema.rst  server.rst  storage.rst
llmeval/: __init__.py  cli.py  exceptions.py  judge.py  runner.py
llmeval/models/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py
llmeval/report/: __init__.py  cli_reporter.py  diff_reporter.py
llmeval/schema/: __init__.py  results.py  test_suite.py
llmeval/server/: __init__.py  api.py
llmeval/storage/: __init__.py  _errors.py  base.py  sqlite.py
scripts/: seed_demo.py
tests/fixtures/: example_suite.json  example_suite.yaml  invalid_weights.yaml
tests/unit/: test_api.py  test_cli.py  test_cli_reporter.py  test_diff_reporter.py  test_judge.py  test_models.py  test_runner.py  test_scaffold.py  test_schema.py  test_storage.py
